--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>С Днём Святого Валентина!</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1 class="fade-in">С Днём Святого Валентина, любимая! ❤️</h1>
-        <p class="fade-in delay">Ты – самое прекрасное, что есть в этом мире!</p>
-        <button class="surprise-btn">Нажми меня!</button>
-        <div class="hidden-message">Ты самая лучшая! 💖</div>
-    </div>
-    
-    <script src="script.js"></script>
-</body>
-</html>
+<canvas></canvas>
