--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<canvas></canvas>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сердце из частиц</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="heartCanvas"></canvas>
+    <script src="script.js"></script>
+</body>
+</html>
